src/RadioGroup/RadioGroup.scss
@import '../common.scss';

.vertical
{
  display: flex;
  flex-direction: column;
}

.horizontal
{
  display: flex;
}

.horizontal .radio-wrapper > label
{
  margin-right: 20px;
}

:global(.rtl) .horizontal .radio-wrapper > label
{
  margin-left: 20px;
}

.vertical .radio-wrapper
{
  margin-bottom: 12px;
}

.radio-wrapper
{
  display: flex;
}

.radio-wrapper, .radio-wrapper > *
{
    cursor:initial;
    box-sizing:border-box;
}

.radio-wrapper > input
{
    display: none;
}

.radio-wrapper > label
{
    display: flex;
    flex-direction: row;
    cursor: pointer;
}

:global(.rtl) .radio-wrapper {
    direction: rtl;
}

.radio-wrapper > label.vcenter
{
    align-items: center;
}

.horizontal .children
{
    padding-left: 6px;
}

.children
{
    padding-left: 12px;
}

:global(.rtl) .children
{
    padding-right: 12px;
}

.radio
{
    box-sizing: border-box;
    display: inline-block;
    position:relative;
    min-width: 17px;
    height: 17px;
    border: 1px solid $B10;
    border-radius: 50%;
}

.radio.checked:after
{
    content:' ';
    display: block;
    border-radius: 50%;
    background-color: $B10;
    width: 11px;
    height: 11px;
    top:0;
    left:0;
    margin:2px;
}

.radio:hover
{
  background-color: $B50;
}

.radio.disabled
{
   border-color: $GR20;
   background-color: $GR30;
}

button.radioButton {
  width: 105px;
  height: 34px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  border: none;
  padding: 0;
  cursor: pointer;
  line-height: 0;
  background: $D80;
  outline: 0;
  color: $D10;

  & + & {
    margin-left: 1px;

    :global(.rtl) & {
      margin-left: 0;
      margin-right: 1px;
    }
  }

  &:disabled {
    cursor: initial;
    color: $D50;
  }

  &.checked {
    box-shadow: $B10 0 0 0 1px;

    &:disabled {
      box-shadow: $B50 0 0 0 1px;
    }
  }

  &:hover {
    background: $B50;

    &.checked,
    &:disabled {
      background: $D80;
    }
  }

  > * {
    margin-left: 4px;
    margin-right: 4px;
  }

  :global(.rtl) & {
    flex-direction: row-reverse;
  }
}

.buttonType {
  border: solid 1px $B40;
  border-radius: 6px;

  :global(.rtl) & {
    flex-direction: row-reverse;
  }
}

